# brita

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: app.py  claude.py  git_helper.py  jinja_helper.py
app/templates/: accuracy.jinja  docstrings.jinja  readme.jinja  robustness.jinja  system.jinja
