[tool.poetry]
name = "brita"
version = "0.1.0"
description = "A code Documentation Generator."
authors = ["WVU MSSE SENG-540 Team"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
pandas = "^2.2.2"
anthropic = "^0.29.0"
jinja2 = "^3.1.4"
streamlit-extras = "^0.4.3"
watchdog = "^4.0.1"
streamlit-modal = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


